codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__experimental_features_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 3083
expression: popup
---
  Experimental features
  Checked features are configured on. Some experimental features take effect
  only in new tasks or after restarting the Moedex server.

› [ ] JavaScript REPL      Enable a persistent Node-backed JavaScript REPL for
                           interactive website debugging and other inline
                           JavaScript execution capabilities.
  [x] Shell tool           Allow the model to run shell commands.
  [ ] Worktrees            Create isolated Git worktrees and group sessions by
                           repository.
  [ ] Voice conversations  Talk with Codex using /voice.

  Press space to select or enter to save
